Remove --sun-misc-unsafe-memory-access=allow flag
This flag was added in #44613 as part of the Java 25 migration but is
no longer needed.