@@ -801,20 +801,19 @@ public class JBallerinaBackend extends CompilerBackend {
         Path nativeConfigPath = packageContext.project().targetDir().resolve("cache");
 
         String nativeAccessArg = "--enable-native-access=ALL-UNNAMED";
-        String unsafeMemoryAccessArg = "-J--sun-misc-unsafe-memory-access=allow";
         if (project.kind().equals(ProjectKind.SINGLE_FILE_PROJECT)) {
             String fileName = project.sourceRoot().toFile().getName();
             nativeImageName = fileName.substring(0, fileName.lastIndexOf(DOT));
             nativeArgs.addAll(Arrays.asList(graalVMBuildOptions, "-jar",
                     executableFilePath.toString(),
                     "-o " + executableFilePath.getParent() + "/" + nativeImageName,
-                    "--no-fallback", nativeAccessArg, unsafeMemoryAccessArg));
+                    "--no-fallback", nativeAccessArg));
         } else {
             nativeImageName = project.currentPackage().packageName().toString();
             nativeArgs.addAll(Arrays.asList(graalVMBuildOptions, "-jar",
                     executableFilePath.toString(),
                     "-o " + executableFilePath.getParent() + "/" + nativeImageName,
-                    "--no-fallback", nativeAccessArg, unsafeMemoryAccessArg));
+                    "--no-fallback", nativeAccessArg));
         }
 
         if (!Files.exists(nativeConfigPath)) {
